--- a/docker-image-src/Dockerfile
+++ b/docker-image-src/Dockerfile
@@ -32,6 +32,7 @@ RUN echo "deb http://ftp.debian.org/debian $(sed -n 's/^VERSION=.*(\(.*\)).*/\1/
     && docker-php-ext-configure zip --with-libzip \
     && pecl install imagick \
     && pecl install redis \
+    && pecl install xdebug \
     && docker-php-ext-install \
         bcmath \
         exif \
@@ -43,6 +44,7 @@ RUN echo "deb http://ftp.debian.org/debian $(sed -n 's/^VERSION=.*(\(.*\)).*/\1/
         pdo_mysql \
     && docker-php-ext-enable imagick \
     && docker-php-ext-enable redis \
+    && docker-php-ext-enable xdebug \
     && { \
         echo 'memory_limit = 512M'; \
         # See https://github.com/visiblevc/wordpress-starter/issues/160#issuecomment-544561961
