--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -1,9 +1,14 @@
 version: v1.0
 name: WordPress CI Pipeline
+
 agent:
   machine:
     type: e1-standard-2
     os_image: ubuntu1804
+
+execution_time_limit:
+  minutes: 5
+
 blocks:
 
   - name: 'Job #1'
