--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
             - 443:443
 
         volumes:
-            - ./scripts:/docker-entrypoint-initwp.d
+            - ./docker-scripts:/docker-entrypoint-initwp.d
             - ./wp-browser:/wp-browser
             - ./my-theme/:/my-theme
             - ./my-plugin:/my-plugin
