--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           no_output_timeout: 5m
           command: |
             host-scripts/up.sh
-            host-scripts/composer.sh
+            host-scripts/setup.sh
             .circleci/fix-permissions.sh
             host-scripts/test.sh
       - save_cache:
