--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -37,7 +37,7 @@ blocks:
             - export COMPOSER_LOCK="$(checksum ./wp-browser/composer.json)"
             - host-scripts/up.sh
             - cache restore "composer-$COMPOSER_LOCK-$COMPOSER_JSON"
-            - host-scripts/composer.sh
+            - host-scripts/setup.sh
             - .semaphore/fix-permissions.sh
             - host-scripts/test.sh
 
