--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -54,11 +54,11 @@ blocks:
             - checkout
             - export COMPOSER_JSON="$(checksum ./wp-browser/composer.lock)"
             - export COMPOSER_LOCK="$(checksum ./wp-browser/composer.json)"
-            - host-scripts/up.sh
+            - scripts/host/up.sh
             - cache restore "composer-$COMPOSER_LOCK-$COMPOSER_JSON"
-            - host-scripts/setup.sh
+            - scripts/code/setup.sh
             - .semaphore/fix-permissions.sh
-            - host-scripts/test.sh
+            - scripts/code/test.sh
 
       epilogue:
         on_pass:
