--- a/src/composer.json
+++ b/src/composer.json
@@ -1,5 +1,9 @@
 {
     "require-dev": {
-        "overtrue/phplint": "^1.2"
+        "overtrue/phplint": "^1.2",
+        "squizlabs/php_codesniffer": "^3.5",
+        "wp-coding-standards/wpcs": "^2.2",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+        "phpcompatibility/php-compatibility": "^9.3"
     }
 }
