--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -29,12 +29,13 @@ blocks:
         - name: Composer cache (--dev)
           commands:
             - .semaphore/composer/cache-restore.sh
-            - scripts/setup.sh
+            - scripts/setup.sh 'composer'
             - .semaphore/composer/cache-store.sh
         - name: NodeJS cache
           commands:
-            # TODO: setup caching of NodeJS deps
-            - echo '...'
+            - .semaphore/yarn/cache-restore.sh
+            - scripts/setup.sh 'yarn'
+            - .semaphore/yarn/cache-store.sh
 
   - name: Linters
     dependencies: ['Prepare cache']
