--- a/configs/large-sql-import.ini
+++ b/configs/large-sql-import.ini
@@ -1,3 +1,5 @@
+;config to allow large MySQL imports via phpMyAdmin
+
 ;values taken from here issue #237
 ;https://github.com/phpmyadmin/docker/issues/237
 
