--- a/configs/xdebug.ini
+++ b/configs/xdebug.ini
@@ -1,3 +1,5 @@
+;config for Xdebug
+
 zend_extension = /usr/local/lib/php/extensions/no-debug-non-zts-20180731/xdebug.so
 xdebug.remote_port = 9001
 xdebug.remote_enable = 1
