--- a/src/.distignore
+++ b/src/.distignore
@@ -29,6 +29,7 @@ multisite.xml.dist
 phpcs.xml
 .phpcs.xml.dist
 phpcs.xml.dist
+phplint.yml
 README.md
 webpack.config.js
 wp-cli.local.yml
@@ -39,3 +40,4 @@ node_modules
 *.sql
 *.tar.gz
 *.zip
+create-dist.sh
