--- a/src/.distignore
+++ b/src/.distignore
@@ -1,43 +1,14 @@
 # A set of files you probably don't want in your WordPress.org distribution
-.babelrc
-.deployignore
 .distignore
 .editorconfig
-.eslintignore
-.eslintrc
-.git
-.gitignore
-.gitlab-ci.yml
-.travis.yml
-.DS_Store
-Thumbs.db
-behat.yml
-bitbucket-pipelines.yml
-bin
-.circleci/config.yml
+.phplint-cache
+.phplint.yml
 composer.json
 composer.lock
-dependencies.yml
+create-dist.sh
 Gruntfile.js
 package.json
-package-lock.json
-phpunit.xml
-phpunit.xml.dist
-multisite.xml
-multisite.xml.dist
-.phpcs.xml
-phpcs.xml
-.phpcs.xml.dist
 phpcs.xml.dist
-phplint.yml
-README.md
-webpack.config.js
-wp-cli.local.yml
 yarn.lock
-tests
-vendor
 node_modules
-*.sql
-*.tar.gz
-*.zip
-create-dist.sh
+vendor
