--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - ./src/:/src
     # apache
       - ./configs/php.ini-development:/usr/local/etc/php/php.ini
+      - ./configs/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
     environment:
     # for different multiline styles of YAML, see
